--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -51,6 +51,17 @@ h1 {
   color: #fff;
 }
 
+.todo-desc {
+  margin-left: -86px;
+  padding: 14px 32px 14px 16px;
+  border-radius: 4px 0 0 4px;
+  border: 2px solid #5d0cff;
+  outline: none;
+  width: 320px;
+  background: transparent;
+  color: #fff;
+}
+
 .todo-input::placeholder {
   color: #e2e2e2;
 }
